/* 
  Localizable.strings
  Habits

  Created by Brendan Caporale on 3/4/25.
  
*/

/* ContentView */
"Habits" = "Habits";
"Add Item" = "Add Item";

/* ContentViewRow */
"Progress:" = "Progress";

/* DetailView */
"Details" = "Details";

/* HabitCounterView */
"Undo Task" = "Undo Task";
"Complete Task" = "Complete Task";

/* HabitView */
"Edit Habit" = "Edit Habit";
"Delete Habit" = "Delete Habit";
"Delete habit: %@" = "Delete habit: %@";
"Delete" = "Delete";
"Cancel" = "Cancel";
"Are you sure?" = "Are you sure?";
"%d Day Streak" = "%d Day Streak";
"%@" = "%@";

/* NoHabitView */
"No Habit Selected" = "No Habit Selected";

/* EditHabitView */
"Title" = "Title";
"Enter the habit title here" = "Enter the habit title here";
"Amount" = "Amount";
"Unit" = "Unit";
"Save" = "Save";
"Edit Habit" = "Edit Habit";
"Habit Information" = "Habit information";

/* NewHabitView */
"New Habit" = "New Habit";

/* Units */
"Count" = "Count";
"mL" = "mL";
"Ounce" = "Ounce";
"Gallon" = "Gallon";
"Mile" = "Mile";
"Kilometer" = "Kilometer";
"Second" = "Second";
"Minute" = "Minute";
"Hour" = "Hour";
"Counts" = "Counts";
"mLs" = "mLs";
"Ounces" = "Ounces";
"Gallons" = "Gallons";
"Miles" = "Miles";
"Kilometers" = "Kilometers";
"Seconds" = "Seconds";
"Minutes" = "Minutes";
"Hours" = "Hours";

/* REMINDERS */
"Reminders" = "Reminders";
"Enable reminders" = "Enable reminders";
"Oops!" = "Oops!";
"There was a problem setting your notification. Please check you have notifications enabled." = "There was a problem setting your notification. Please check you have notifications enabled.";
"Check Settings" = "Check Settings";
"Reminder time" = "Reminder time";
